--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.5.0",
+    "react-router-dom": "^6.21.0",
     "styled-components": "^6.1.0"
   },
   "devDependencies": {
