--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "glob": "^10.3.10",
     "jest": "^29.7.0",
     "jsdom": "^23.0.1",
     "typescript": "^5.0.2",
