--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "styled-components": "^6.1.0"
   },
   "devDependencies": {
+    "@fseehawer/react-circular-slider": "fseehawer/react-circular-slider",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
     "@types/react": "^18.0.37",
